<?xml version="1.0"?>
<package>
  <name>occ_map</name>
  <version>1.0.0</version>
  <description>The occ_map package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>occ_map_lcmtypes</build_depend>
  <run_depend>occ_map_lcmtypes</run_depend>

</package>
